--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,7 @@ resets all elements
   } 
 
   /* clean view */
-.weather{
+#weatherData{
   display: none; 
 }
 
@@ -53,6 +53,7 @@ resets all elements
   grid-template-areas:
   "label searchInput searchInput"
   "navButtons navButtons navButtons" 
+  "error error error "
   "weatherData weatherData weatherData";
   grid-gap:10px;
 
@@ -61,6 +62,7 @@ resets all elements
 #searchInput{grid-area:searchInput;}
 #navButtons{grid-area:navButtons;align-items: center;}
 #weatherData{grid-area:weatherData;} 
+.error{grid-area:error;} 
 @media only screen and (max-width: 720px){
   #container{
       grid-template-columns: 1fr;
@@ -69,6 +71,7 @@ resets all elements
       "label"
       "searchInput"
       "navButtons"
+      "error"
       "weatherData";
      
   }
