--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,35 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;800;900&display=swap');
-resets all elements
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background: none;
-    border: none;
-    border-radius: none;
-  }
-  body
-  {
-    min-height: 100svh; /*scalable viewport height */
-    max-width: 100svw;
-  background-color: pink; 
-  color:azure;
-  font-family: 'Inter', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800;900&display=swap");
+resets all elements * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: none;
+}
+body {
+  min-height: 100svh; /*scalable viewport height */
+  max-width: 100svw;
+  background-color: pink;
+  color: azure;
+  font-family: "Inter", sans-serif;
   font-size: 2em;
-  } 
-
-  /* clean view */
-#weatherData, .error{
-  display: none; 
 }
 
-#searchInput{
+/* clean view */
+#weatherData,
+.error {
+  display: none;
+}
+
+/* Search input */
+#searchInput {
   padding: 0.5em;
   font-size: 1rem;
   text-align: center;
   font-weight: bold;
 }
-.btn{
+.btn {
   padding: 0.5em;
   font-size: 1rem;
   font-weight: 800;
@@ -40,42 +40,55 @@ resets all elements
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
-.btn:hover { background-color: #0062cc;  }
-#container{
-  display:grid;
-  height:50vh;
+.btn:hover {
+  background-color: #0062cc;
+}
+#container {
+  display: grid;
+  height: 50vh;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows:1fr 0.3fr 1fr 1fr;
+  grid-template-rows: 1fr 0.3fr 1fr 1fr;
   grid-template-areas:
-  "label searchInput searchInput"
-  "navButtons navButtons navButtons" 
-  "error error error "
-  "weatherData weatherData weatherData"
-  "weekly weekly weekly";
-  grid-gap:10px;
-
+    "label searchInput searchInput"
+    "navButtons navButtons navButtons"
+    "error error error "
+    "weatherData weatherData weatherData"
+    "weekly weekly weekly";
+  grid-gap: 10px;
 }
 #container {
   margin: 0 auto;
   max-width: 100%;
 }
-#search.searchLabel{grid-area:label;}
-#weekly{grid-area:weekly;background-color: aquamarine;}
-#searchInput{grid-area:searchInput;}
-#navButtons{grid-area:navButtons;}
-#weatherData{grid-area:weatherData;} 
-.error{grid-area:error;} 
-@media only screen and (max-width: 720px){
-  #container{
-      grid-template-columns: 1fr;
-      grid-template-rows: 0.4fr 0.4fr 0.4fr 1fr 1fr;
-      grid-template-areas:
+#search.searchLabel {
+  grid-area: label;
+}
+#weekly {
+  grid-area: weekly;
+  background-color: aquamarine;
+}
+#searchInput {
+  grid-area: searchInput;
+}
+#navButtons {
+  grid-area: navButtons;
+}
+#weatherData {
+  grid-area: weatherData;
+}
+.error {
+  grid-area: error;
+}
+@media only screen and (max-width: 720px) {
+  #container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.4fr 0.4fr 0.4fr 1fr 1fr;
+    grid-template-areas:
       "label"
       "searchInput"
       "navButtons"
       "error"
       "weatherData"
       "weekly";
-     
   }
 }
